force-app/main/default/objects/Engaged_Couple__c/Engaged_Couple__c.object-meta.xml
<CustomObject>
    <label>Engaged Couple</label>
    <nameField>
        <label>Engaged Couple</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engaged Couples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>