force-app/main/default/objects/Engaged_Couple__c/fields/All_feedback_forms_received__c.field-meta.xml
<CustomField>
    <fullName>All_feedback_forms_received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark as true once all feedback forms for Marriage Formation sessions have been received by both parties.</inlineHelpText>
    <label>Submitted All Coursework</label>
    <type>Checkbox</type>
</CustomField>