force-app/main/default/objects/Engaged_Couple__c/fields/All_MF_Requirements_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_MF_Requirements_Complete__c</fullName>
    <description>Checks if all requirements have been marked as complete: Attendance at all sessions = TRUE, Submitted all coursework = TRUE, Couple met with PE Facilitator = TRUE.</description>
    <formula>AND(
    Attendance_at_all_sessions__c = TRUE,
    All_feedback_forms_received__c = TRUE,
    Couple_Met_with_PE_Facilitator__c = TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks if all requirements have been marked as complete: Attendance at all sessions = TRUE, Submitted all coursework = TRUE, Couple met with PE Facilitator = TRUE.</inlineHelpText>
    <label>All MF Requirements Complete</label>
    <type>Checkbox</type>
</CustomField>