force-app/main/default/objects/Engaged_Couple__c/fields/Alternative_Priest_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Priest_Email__c</fullName>
    <inlineHelpText>When documentation should be sent to a non-local priest include their name and email here.</inlineHelpText>
    <label>Alternative Priest &amp; Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>