force-app/main/default/objects/Engaged_Couple__c/fields/Alternative_Wedding_Location__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Wedding_Location__c</fullName>
    <description>Where the wedding is to take place if NOT at the original parish preparing documentation.</description>
    <inlineHelpText>Where the wedding is to take place if NOT at the original parish preparing documentation.</inlineHelpText>
    <label>Alternative Wedding Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>