force-app/main/default/objects/Engaged_Couple__c/fields/Attendance_at_all_sessions__c.field-meta.xml
<CustomField>
    <fullName>Attendance_at_all_sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark as true once both parties have attended all required Marriage Formation sessions.</inlineHelpText>
    <label>Attended All Required Sessions</label>
    <type>Checkbox</type>
</CustomField>