force-app/main/default/objects/Engaged_Couple__c/fields/Bride__c.field-meta.xml
<CustomField>
    <fullName>Bride__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bride</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lay Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engaged Couples (Bride)</relationshipLabel>
    <relationshipName>Marriage_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>