force-app/main/default/objects/Engaged_Couple__c/fields/Bride_s_Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Bride_s_Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bride&apos;s Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Engaged Couples (Bride&apos;s Program Engagement)</relationshipLabel>
    <relationshipName>Engaged_Couples_Bride</relationshipName>
    <type>Lookup</type>
</CustomField>