force-app/main/default/objects/Engaged_Couple__c/fields/Comments_Internal__c.field-meta.xml
<CustomField>
    <fullName>Comments_Internal__c</fullName>
    <inlineHelpText>Summary comments for internal staff usage. Where more detailed notes are required, create a new related Note.</inlineHelpText>
    <label>Comments (Internal)</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>