force-app/main/default/objects/Engaged_Couple__c/fields/Completion_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The MF Report is distributed to the signing pastor, parish, and the couple.</description>
    <inlineHelpText>The MF Report is distributed to the signing pastor, parish, and the couple.</inlineHelpText>
    <label>Sent MF Report</label>
    <type>Checkbox</type>
</CustomField>