force-app/main/default/objects/Engaged_Couple__c/fields/Contacted_by_WTL_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Contacted_by_WTL_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the couple been contacted by the WTL Coordinator or Coaching Couple, to invite them to participate in WTL?</inlineHelpText>
    <label>Contacted by WTL Coordinator?</label>
    <type>Checkbox</type>
</CustomField>