force-app/main/default/objects/Engaged_Couple__c/fields/Couple_is_civilly_married__c.field-meta.xml
<CustomField>
    <fullName>Couple_is_civilly_married__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couple is civilly married?</label>
    <type>Checkbox</type>
</CustomField>