force-app/main/default/objects/Engaged_Couple__c/fields/Couple_Met_with_PE_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Couple_Met_with_PE_Facilitator__c</fullName>
    <description>If &apos;PE Facilitator Meeting Date&apos; field value is not null and is in the past, a Couple is considered to have met with their PE Facilitator.</description>
    <formula>AND(
     PE_Facilitator_Meeting_Date__c &lt; TODAY(),
      PE_Facilitator__c != NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If &apos;PE Facilitator Meeting Date&apos; field value is not empty and the date is in the past, a Couple is considered to have met with their PE Facilitator.</inlineHelpText>
    <label>Couple Met with PE Facilitator</label>
    <type>Checkbox</type>
</CustomField>