force-app/main/default/objects/Engaged_Couple__c/fields/Couple_to_participate_in_WTL__c.field-meta.xml
<CustomField>
    <fullName>Couple_to_participate_in_WTL__c</fullName>
    <inlineHelpText>Has the couple expressed their intention to participate in the WTL program?</inlineHelpText>
    <label>Couple to participate in WTL?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>