force-app/main/default/objects/Engaged_Couple__c/fields/Date_of_Civil_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Civil_Marriage__c</fullName>
    <inlineHelpText>Include only if the couple was civilly married previously.</inlineHelpText>
    <label>Date of Civil Marriage</label>
    <type>Date</type>
</CustomField>