force-app/main/default/objects/Engaged_Couple__c/fields/FAH_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>FAH_Course_Code__c</fullName>
    <formula>Fertility_Heath_Awareness2__r.Service_Schedule_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAH Course Code</label>
    <type>Text</type>
</CustomField>