force-app/main/default/objects/Engaged_Couple__c/fields/Fertility_Health_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Health_Awareness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fertility Health Awareness</label>
    <referenceTo>pmdm__ServiceSession__c</referenceTo>
    <relationshipLabel>Engaged Couples</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>