force-app/main/default/objects/Engaged_Couple__c/fields/Fertility_Heath_Awareness2__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Heath_Awareness2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fertility Heath Seminar</label>
    <referenceTo>pmdm__ServiceSchedule__c</referenceTo>
    <relationshipLabel>Engaged Couples (Fertility Heath Seminar)</relationshipLabel>
    <relationshipName>Engaged_Couples1</relationshipName>
    <type>Lookup</type>
</CustomField>