force-app/main/default/objects/Engaged_Couple__c/fields/Final_Completion_Task__c.field-meta.xml
<CustomField>
    <fullName>Final_Completion_Task__c</fullName>
    <description>Specifies the final action the MF Program Admin is to take to complete the MF administrative process, to specify the subject line of the Task to be generated.</description>
    <formula>IF(
      To_be_married_outside_of_local_diocese__c = TRUE, 
      &quot;Send MF Report and Certificate to &quot; &amp; TEXT(Signing_Priest_Deacon__r.Salutation) &amp; &quot; &quot; &amp; Signing_Priest_Deacon__r.FirstName &amp; &quot; &quot; &amp; Signing_Priest_Deacon__r.LastName,
      &quot;Send MF Report to &quot; &amp; TEXT(Signing_Priest_Deacon__r.Salutation) &amp; &quot; &quot; &amp; Signing_Priest_Deacon__r.FirstName &amp; &quot; &quot; &amp; Signing_Priest_Deacon__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies the final action the MF Program Admin is to take to complete the MF administrative process, to specify the subject line of the Task to be generated.</inlineHelpText>
    <label>Final Completion Task</label>
    <type>Text</type>
</CustomField>