force-app/main/default/objects/Engaged_Couple__c/fields/Groom__c.field-meta.xml
<CustomField>
    <fullName>Groom__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Groom</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engaged Couples (Groom)</relationshipLabel>
    <relationshipName>Marriage_Engagements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>