force-app/main/default/objects/Engaged_Couple__c/fields/Groom_s_Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Groom_s_Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groom&apos;s Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Engaged Couples</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>