force-app/main/default/objects/Engaged_Couple__c/fields/Intended_Wedding_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Wedding_Date__c</fullName>
    <inlineHelpText>Intended wedding date</inlineHelpText>
    <label>Intended Wedding Date</label>
    <type>Date</type>
</CustomField>