force-app/main/default/objects/Engaged_Couple__c/fields/Mentor_Couple__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Couple__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The married couple that meets with the couple throughout WTL sessions.</description>
    <inlineHelpText>The married couple that meets with the couple throughout WTL sessions.</inlineHelpText>
    <label>WTL Mentor Couple</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engaged Couples (Mentor Couple)</relationshipLabel>
    <relationshipName>Marriage_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>