force-app/main/default/objects/Engaged_Couple__c/fields/Mentor_Couple_Email__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Couple_Email__c</fullName>
    <label>WTL Mentor Couple Email</label>
    <type>Email</type>
</CustomField>