force-app/main/default/objects/Engaged_Couple__c/fields/Mentor_Couple_text__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Couple_text__c</fullName>
    <label>WTL Mentor Couple (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>