force-app/main/default/objects/Engaged_Couple__c/fields/Met_with_PE_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Met_with_PE_Facilitator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met with PE Facilitator</label>
    <type>Checkbox</type>
</CustomField>