force-app/main/default/objects/Engaged_Couple__c/fields/MF_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>MF_Course_Code__c</fullName>
    <formula>MF_Course_Enrollment__r.Service_Schedule_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MF Course Code</label>
    <type>Text</type>
</CustomField>