force-app/main/default/objects/Engaged_Couple__c/fields/MF_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>MF_Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct lookup to MF Course that Engaged Couple will be attending. Populated via Registration system (FormAssembly).</description>
    <inlineHelpText>Direct lookup to MF Course that Engaged Couple will be attending. Populated via Registration system (FormAssembly).</inlineHelpText>
    <label>MF Course Enrollment</label>
    <referenceTo>pmdm__ServiceSchedule__c</referenceTo>
    <relationshipLabel>Engaged Couples</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>