force-app/main/default/objects/Engaged_Couple__c/fields/MF_Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MF_Course_Start_Date__c</fullName>
    <description>Formula to capture Couple&apos;s &apos;start date&apos; for their MF Course, for triggering automation.</description>
    <formula>MF_Course_Enrollment__r.pmdm__FirstSessionStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to capture Couple&apos;s &apos;start date&apos; for their MF Course, for triggering automation.</inlineHelpText>
    <label>MF Course Start Date</label>
    <type>Date</type>
</CustomField>