force-app/main/default/objects/Engaged_Couple__c/fields/Next_Wedding_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Next_Wedding_Anniversary__c</fullName>
    <formula>IF(
 
YEAR(TODAY())*10000+MONTH(TODAY())*100+DAY(TODAY())  &lt;  YEAR(TODAY())*10000+MONTH( Intended_Wedding_Date__c  )*100+DAY( Intended_Wedding_Date__c ),
 
DATE(YEAR(TODAY()),MONTH( Intended_Wedding_Date__c ),DAY( Intended_Wedding_Date__c )),
 
DATE(YEAR(TODAY()+365),MONTH( Intended_Wedding_Date__c ),DAY( Intended_Wedding_Date__c ))
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of couple&apos;s next wedding anniversary - depends on &quot;Wedding Date (Expected)&quot; field.</inlineHelpText>
    <label>Next Wedding Anniversary</label>
    <type>Date</type>
</CustomField>