force-app/main/default/objects/Engaged_Couple__c/fields/Notes_to_Parish_Priest__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Parish_Priest__c</fullName>
    <inlineHelpText>Notes to be included on the Completion Report sent to parish priest.</inlineHelpText>
    <label>Notes to Parish/Priest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>