force-app/main/default/objects/Engaged_Couple__c/fields/Original_MF_Course_Registration__c.field-meta.xml
<CustomField>
    <fullName>Original_MF_Course_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original MF Course Registration</label>
    <referenceTo>Marriage_Form_Registration__c</referenceTo>
    <relationshipLabel>Engaged Couples</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>