force-app/main/default/objects/Engaged_Couple__c/fields/Parish_preparing_docs__c.field-meta.xml
<CustomField>
    <fullName>Parish_preparing_docs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Local Parish that is preparing Marriage forms.</inlineHelpText>
    <label>Parish preparing docs</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Parish</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engaged Couples (Parish preparing docs)</relationshipLabel>
    <relationshipName>Marriage_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>