force-app/main/default/objects/Engaged_Couple__c/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <inlineHelpText>Passcode that WTL Coordinators use to update Engaged Couple records in FormAssembly form.</inlineHelpText>
    <label>Passcode</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>