force-app/main/default/objects/Engaged_Couple__c/fields/PE_enroll_completed__c.field-meta.xml
<CustomField>
    <fullName>PE_enroll_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did staff enroll the couple in Prepare &amp; Enrich, so that they can complete the assessment?</inlineHelpText>
    <label>PE Enrollment Completed</label>
    <type>Checkbox</type>
</CustomField>