force-app/main/default/objects/Engaged_Couple__c/fields/PE_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>PE_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>May delete this if PE Facilitator sessions are tracked as Service Deliveries.</inlineHelpText>
    <label>PE Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engaged Couples (PE Facilitator)</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>