force-app/main/default/objects/Engaged_Couple__c/fields/PE_Facilitator_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>PE_Facilitator_Meeting_Date__c</fullName>
    <description>Scheduled date when couple will meet, or has met with, their assigned Prepare and Enrich Facilitator.</description>
    <inlineHelpText>Scheduled date when couple will meet, or has met with, their assigned Prepare and Enrich Facilitator.</inlineHelpText>
    <label>PE Facilitator Meeting Date</label>
    <type>Date</type>
</CustomField>