force-app/main/default/objects/Engaged_Couple__c/fields/PE_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>PE_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE Report Sent</label>
    <type>Checkbox</type>
</CustomField>