force-app/main/default/objects/Engaged_Couple__c/fields/PE_Result__c.field-meta.xml
<CustomField>
    <fullName>PE_Result__c</fullName>
    <description>Prepare and Enrich results category.</description>
    <inlineHelpText>Prepare and Enrich results category.</inlineHelpText>
    <label>PE Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vitalized</fullName>
            </value>
            <value>
                <fullName>Harmonious</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Conflicted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>