force-app/main/default/objects/Engaged_Couple__c/fields/Program_Engagement_Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement_Records_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked TRUE by flow when Program Engagement records are automatically created.</description>
    <inlineHelpText>Marked TRUE by flow when Program Engagement records are automatically created.</inlineHelpText>
    <label>Program Engagement Records Created?</label>
    <type>Checkbox</type>
</CustomField>