force-app/main/default/objects/Engaged_Couple__c/fields/Received_signed_parish_form__c.field-meta.xml
<CustomField>
    <fullName>Received_signed_parish_form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The office has receive the pastor&apos;s signed approval for the couple to proceed with the marriage formation process.</inlineHelpText>
    <label>Received Signed Parish Form</label>
    <type>Checkbox</type>
</CustomField>