force-app/main/default/objects/Engaged_Couple__c/fields/Schedule_Meeting_with_PE_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Meeting_with_PE_Facilitator__c</fullName>
    <description>Internal Notes related to scheduling a meeting between the Couple and a PE Facilitator.</description>
    <inlineHelpText>Internal Notes related to scheduling a meeting between the Couple and a PE Facilitator.</inlineHelpText>
    <label>Scheduling Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>