force-app/main/default/objects/Engaged_Couple__c/fields/Sent_MF_Report__c.field-meta.xml
<CustomField>
    <fullName>Sent_MF_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The final MF Report (and Certificate, when necessary) is sent to the signing pastor, parish, and the couple.</description>
    <inlineHelpText>The final MF Report (and Certificate, when necessary) is sent to the signing pastor, parish, and the couple.</inlineHelpText>
    <label>Sent MF Report</label>
    <type>Checkbox</type>
</CustomField>