force-app/main/default/objects/Engaged_Couple__c/fields/Sent_PE_Follow_Up_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_PE_Follow_Up_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the PE Follow Up email was sent (manually or programatically).</description>
    <inlineHelpText>Tracks if the PE Follow Up email was sent (manually or programatically).</inlineHelpText>
    <label>Sent PE Follow-Up Email</label>
    <type>Checkbox</type>
</CustomField>