force-app/main/default/objects/Engaged_Couple__c/fields/Signing_Priest_Deacon__c.field-meta.xml
<CustomField>
    <fullName>Signing_Priest_Deacon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Priest or Deacon who is pastorally responsible for signing off on Marriage Formation paperwork.</inlineHelpText>
    <label>Signing Priest/Deacon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engaged Couples (Priest)</relationshipLabel>
    <relationshipName>Marriage_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>