force-app/main/default/objects/Engaged_Couple__c/fields/Signing_Priest_Deacon_text__c.field-meta.xml
<CustomField>
    <fullName>Signing_Priest_Deacon_text__c</fullName>
    <label>Signing Priest/Deacon (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>