force-app/main/default/objects/Engaged_Couple__c/fields/Stage_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Relationship__c</fullName>
    <inlineHelpText>Stage of relationship the couple is in on their path of discernment towards marriage.</inlineHelpText>
    <label>Stage of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-engaged</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Civilly Married</fullName>
            </value>
            <value>
                <fullName>Completed - Sacrament of Marriage</fullName>
            </value>
            <value>
                <fullName>Completed - Relationship Ended</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>