force-app/main/default/objects/Engaged_Couple__c/fields/Submitted_Parish_Form__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Parish_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The parish has submitted the pastor&apos;s signed approval for the couple to proceed with the marriage formation process.</description>
    <inlineHelpText>The parish has submitted the pastor&apos;s signed approval for the couple to proceed with the marriage formation process.</inlineHelpText>
    <label>Submitted Parish Form</label>
    <type>Checkbox</type>
</CustomField>