force-app/main/default/objects/Engaged_Couple__c/fields/To_be_married_outside_of_local_diocese__c.field-meta.xml
<CustomField>
    <fullName>To_be_married_outside_of_local_diocese__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the couple is preparing for marriage locally but will be married outside of the local diocese.</inlineHelpText>
    <label>To Be Married Outside of Local Diocese</label>
    <type>Checkbox</type>
</CustomField>