force-app/main/default/objects/Engaged_Couple__c/fields/WTL_Coaching_Couple__c.field-meta.xml
<CustomField>
    <fullName>WTL_Coaching_Couple__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Local ministry leaders (couple) that facilitate follow-up sessions with the engaged couple and monitors their progress in the WTL program.</description>
    <inlineHelpText>Local ministry leaders (couple) that facilitate follow-up sessions with the engaged couple and monitors their progress in the WTL program.</inlineHelpText>
    <label>WTL Coaching Couple</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engaged Couples (Coaching Couple)</relationshipLabel>
    <relationshipName>Engaged_Couples</relationshipName>
    <type>Lookup</type>
</CustomField>