force-app/main/default/objects/Engaged_Couple__c/fields/WTL_Mentor_Couple_Relationship__c.field-meta.xml
<CustomField>
    <fullName>WTL_Mentor_Couple_Relationship__c</fullName>
    <inlineHelpText>Did the engaged couple choose mentors from their personal network of relationships, or did they choose from a list of parish volunteers?</inlineHelpText>
    <label>WTL Mentor Couple Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chosen from parish list</fullName>
            </value>
            <value>
                <fullName>Previously existing relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>