force-app/main/default/objects/Engaged_Couple__c/fields/WTL_Only_Track__c.field-meta.xml
<CustomField>
    <fullName>WTL_Only_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WTL Only Track</label>
    <type>Checkbox</type>
</CustomField>