force-app/main/default/objects/Engaged_Couple__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Groom__c</columns>
    <columns>Bride__c</columns>
    <columns>Intended_Wedding_Date__c</columns>
    <columns>Parish_preparing_docs__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>