force-app/main/default/objects/Engaged_Couple__c/listViews/ALL_Couples_Received_Parish_Forms.listView-meta.xml
<ListView>
    <fullName>ALL_Couples_Received_Parish_Forms</fullName>
    <columns>NAME</columns>
    <columns>Groom__c</columns>
    <columns>Bride__c</columns>
    <columns>Submitted_Parish_Form__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:12</value>
    </filters>
    <label>ALL Couples - Received Parish Forms</label>
</ListView>