force-app/main/default/objects/Engaged_Couple__c/listViews/MF0061.listView-meta.xml
<ListView>
    <fullName>MF0061</fullName>
    <columns>NAME</columns>
    <columns>Bride__c</columns>
    <columns>Groom__c</columns>
    <columns>Parish_preparing_docs__c</columns>
    <columns>Intended_Wedding_Date__c</columns>
    <columns>PE_Result__c</columns>
    <columns>Schedule_Meeting_with_PE_Facilitator__c</columns>
    <columns>PE_Facilitator__c</columns>
    <columns>Submitted_Parish_Form__c</columns>
    <columns>Completion_Report_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MF_Course_Code__c</field>
        <operation>equals</operation>
        <value>MF-0061</value>
    </filters>
    <label>MF-0061</label>
    <sharedTo>
        <group>Marriage_Formation</group>
    </sharedTo>
</ListView>